# fictional-disco

./: .env.example  .gitignore  AGENTS.md  LICENSE  TODO.md  pyproject.toml
Prompts/: prompt_step2.md  prompt_step4.md
Schemas/: answer_schema.json  question_schema.json
docs/: doc2x_api.md  md2json_lessons_learned.md
prompts/: prompt_answers.md  prompt_md2json.md
src/exam_parser/: answers.py  any2pdf.py  config.py  convert.py  json_io.py  main.py  md2json.py  pdf2md.py  step0_convert.py  step1_pdf2md.py  step2_md2json.py  step3_validate.py  step4_answers.py  step5_final.py
tests/: conftest.py
tests/answers/: test_answers.py
tests/fixtures/answers/: test_answers.py
tests/fixtures/answers/expected/: merged_top_level_question.json  questions_with_answers.json
tests/fixtures/answers/input/: questions_bundle.json  top_level_question.json  概率论7套真题.json
tests/fixtures/any2pdf/: README.md  run_any2pdf_fixture.py
tests/fixtures/md2json/: run_md2json_fixture.py
tests/fixtures/md2json/expected/: 概率论7套真题.json
tests/fixtures/md2json/input/: 概率论7套真题.md
tests/fixtures/pdf2md/: run_pdf2md_fixture.py
tests/integration/: test_main.py
tests/unit/: test_any2pdf.py  test_md2json.py  test_pdf2md.py
接口文档/: openrouter-structured-output.md
集成测试/Markdown转JSON/标准答案/: 概率论7套真题.json
